# UDDSketch

./: CMakeLists.txt  LICENSE  README.md  build.sh
libdict/: GNUmakefile
libuddsketch/: CMakeLists.txt
libuddsketch/include/: dds_bucket_id_mapping.h  dds_gsketch.h  dds_mapstore.h  dds_psketch.h  dds_sketch.h  dds_store.h
libuddsketch/include/dict/: textcolor_macros.h
libuddsketch/src/: dds_bucket_id_mapping.c  dds_gsketch.c  dds_mapstore.c  dds_psketch.c  dds_sketch.c  dds_store.c
uddsketch-test/: CMakeLists.txt  main.c  textcolor_macros.h
